added button and logo

--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,14 @@ main {
 	flex: 1 0 auto;
 }
 
+.header img{
+	max-height: 180px;
+}
+
+#calculate-button {
+	max-height: 100px;
+}
+
 .results {
 	display: none;
 	background-color: #ccc;
