--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,9 @@ p {
 h4 {
 	font-size: 1.5rem;
 }
+h5 {
+    font-size: 1.35rem;
+}
 
 main {
     flex: 1 0 auto;
@@ -45,7 +48,6 @@ main {
 
 .results {
     display: none;
-    overflow: auto;
 }
 
 .attractions {
@@ -56,9 +58,15 @@ main {
 .hotel {
     width: 25%;
     display: inline-block;
-    vertical-align: middle;
+    top: 0;
 }
 
 .day {
     text-align: center;
+    margin-top: 20px;
 }
+
+.attraction {
+    display: inline-block;
+    margin: 10px 10px
+;}
