--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,11 @@ body {
     min-height: 100vh;
     flex-direction: column;
     font-family: Gravity-Book;
+    background-size: 100% 100%;
+}
+
+h1, h2, h3, h4, h5, h6, p {
+    color: black;
 }
 
 p {
@@ -28,7 +33,7 @@ p {
 }
 
 h4 {
-	font-size: 1.5rem;
+	font-size: 1.8rem;
 }
 h5 {
     font-size: 1.35rem;
@@ -42,6 +47,9 @@ main {
     max-height: 160px;
 }
 
+.icon-block {
+}
+
 #calculate-button {
     max-height: 100px;
 }
@@ -51,14 +59,13 @@ main {
 }
 
 .attractions {
-    width: 70%;
+    width: 55%;
     display: inline-block;
 }
 
 .hotel {
-    width: 25%;
+    width: 40%;
     display: inline-block;
-    top: 0;
 }
 
 .day {
@@ -68,5 +75,7 @@ main {
 
 .attraction {
     display: inline-block;
+    width: auto;
+    height: 200px;
     margin: 10px 10px
 ;}
